Replacing OpenAI library with official openai-java, adding streaming, rewriting complete code