@@ -1,12 +1,14 @@
 package solutions.own.instructor4j;
 
+import com.openai.models.ChatCompletion;
+import com.openai.models.ChatCompletionMessage;
+import com.openai.models.ChatCompletionMessageToolCall;
+import java.util.Arrays;
+import java.util.Collections;
 import solutions.own.instructor4j.exception.InstructorException;
+import solutions.own.instructor4j.model.BaseMessage;
 import solutions.own.instructor4j.model.User;
 import solutions.own.instructor4j.service.AiChatService;
-import solutions.own.instructor4j.service.impl.OpenAiChatService;
-
-import com.theokanning.openai.completion.chat.*;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import org.junit.jupiter.api.Test;
 
@@ -14,35 +16,45 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static solutions.own.instructor4j.util.Utils.listOf;
 
 public class InstructorTest {
-
-    ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
     public void testSuccessfulResponse() throws Exception {
 
-        AiChatService mockService = mock(OpenAiChatService.class);
-        ObjectMapper objectMapper = new ObjectMapper();
+        AiChatService mockService = mock(AiChatService.class);
 
         String functionArguments = "{\"age\":30,\"name\":\"Nenad Alajbegovic\"}";
 
-        ChatMessage functionCallMessage = new ChatMessage("assistant");
-        functionCallMessage.setFunctionCall(new ChatFunctionCall("User", objectMapper.readTree(functionArguments)));
+        ChatCompletionMessage chatCompletionMessage = ChatCompletionMessage.builder().toolCalls(
+            listOf(
+                ChatCompletionMessageToolCall.builder()
+                    .id("id")
+                    .function(
+                        ChatCompletionMessageToolCall.Function.builder()
+                            .arguments(functionArguments)
+                            .name("User")
+                            .build()
+                    )
+                    .type(ChatCompletionMessageToolCall.Type.FUNCTION)
+                    .build()
+            )
+        ).build();
 
-        ChatCompletionChoice choice = new ChatCompletionChoice();
-        choice.setMessage(functionCallMessage);
+        com.openai.models.ChatCompletion.Choice choice =
+            com.openai.models.ChatCompletion.Choice.builder().message(chatCompletionMessage).build();
 
-        ChatCompletionResult mockResult = new ChatCompletionResult();
-        mockResult.setChoices(List.of(choice));
+        ChatCompletion mockResult = ChatCompletion.builder().choices(
+            Collections.unmodifiableList(Arrays.asList(choice))).build();
 
         when(mockService.createChatCompletion(any())).thenReturn(mockResult);
 
         Instructor instructor = new Instructor(mockService, 3);
 
-        List<ChatMessage> messages = List.of(
-                new ChatMessage("user", "Nenad Alajbegovic is 30 years old")
-        );
+        List<BaseMessage> messages = Collections.unmodifiableList(Arrays.asList(
+            new BaseMessage(BaseMessage.Role.USER.getValue(), "Nenad Alajbegovic is 30 years old")
+        ));
 
         User user = instructor.createChatCompletion(messages, "gpt-4o-mini", User.class);
 
@@ -54,31 +66,56 @@ public class InstructorTest {
     @Test
     public void testValidationFailureAndRetry() throws Exception {
 
-        AiChatService mockService = mock(OpenAiChatService.class);
+        AiChatService mockService = mock(AiChatService.class);
 
-        // First response missing 'name' field
+         //First response missing 'name' field
         String functionArguments1 = "{\"age\":30}";
 
         // Second response with all required fields
         String functionArguments2 = "{\"age\":30,\"name\":\"Nenad Alajbegovic\"}";
 
-        ChatMessage functionCallMessage1 = new ChatMessage("assistant");
-        functionCallMessage1.setFunctionCall(new ChatFunctionCall("User", objectMapper.readTree(functionArguments1)));
+        ChatCompletionMessage chatCompletionMessage1 = ChatCompletionMessage.builder().toolCalls(
+            listOf(
+                ChatCompletionMessageToolCall.builder()
+                    .id("id1")
+                    .function(
+                        ChatCompletionMessageToolCall.Function.builder()
+                            .arguments(functionArguments1)
+                            .name("User")
+                            .build()
+                    )
+                    .type(ChatCompletionMessageToolCall.Type.FUNCTION)
+                    .build()
+            )
+        ).build();
 
-        ChatCompletionChoice choice1 = new ChatCompletionChoice();
-        choice1.setMessage(functionCallMessage1);
+        com.openai.models.ChatCompletion.Choice choice1 =
+            com.openai.models.ChatCompletion.Choice.builder().message(chatCompletionMessage1).build();
 
-        ChatCompletionResult mockResult1 = new ChatCompletionResult();
-        mockResult1.setChoices(List.of(choice1));
+        ChatCompletion mockResult1 = ChatCompletion.builder().choices(Collections.unmodifiableList(
+            Arrays.asList(choice1))).build();
 
-        ChatMessage functionCallMessage2 = new ChatMessage("assistant");
-        functionCallMessage2.setFunctionCall(new ChatFunctionCall("User", objectMapper.readTree(functionArguments2)));
 
-        ChatCompletionChoice choice2 = new ChatCompletionChoice();
-        choice2.setMessage(functionCallMessage2);
+        ChatCompletionMessage chatCompletionMessage2 = ChatCompletionMessage.builder().toolCalls(
+            listOf(
+                ChatCompletionMessageToolCall.builder()
+                    .id("id2")
+                    .function(
+                        ChatCompletionMessageToolCall.Function.builder()
+                            .arguments(functionArguments2)
+                            .name("User")
+                            .build()
+                    )
+                    .type(ChatCompletionMessageToolCall.Type.FUNCTION)
+                    .build()
+            )
+        ).build();
 
-        ChatCompletionResult mockResult2 = new ChatCompletionResult();
-        mockResult2.setChoices(List.of(choice2));
+        com.openai.models.ChatCompletion.Choice choice2 =
+            com.openai.models.ChatCompletion.Choice.builder().message(chatCompletionMessage2).build();
+
+        ChatCompletion mockResult2 = ChatCompletion.builder().choices(Collections.unmodifiableList(
+            Arrays.asList(choice2))).build();
 
         when(mockService.createChatCompletion(any()))
                 .thenReturn(mockResult1)
@@ -86,9 +123,9 @@ public class InstructorTest {
 
         Instructor instructor = new Instructor(mockService, 3);
 
-        List<ChatMessage> messages = List.of(
-                new ChatMessage("user", "Nenad Alajbegovic is 30 years old")
-        );
+        List<BaseMessage> messages = Collections.unmodifiableList(Arrays.asList(
+            new BaseMessage(BaseMessage.Role.USER.getValue(), "Nenad Alajbegovic is 30 years old")
+        ));
 
         User user = instructor.createChatCompletion(messages, "gpt-4o-mini", User.class);
 
@@ -102,26 +139,38 @@ public class InstructorTest {
     @Test
     public void testMaxRetriesExceeded() throws Exception {
 
-        AiChatService mockService = mock(OpenAiChatService.class);
+        AiChatService mockService = mock(AiChatService.class);
 
         String functionArguments = "{\"age\":30}";
 
-        ChatMessage functionCallMessage = new ChatMessage("assistant");
-        functionCallMessage.setFunctionCall(new ChatFunctionCall("User", objectMapper.readTree(functionArguments)));
+        ChatCompletionMessage chatCompletionMessage = ChatCompletionMessage.builder().toolCalls(
+            listOf(
+                ChatCompletionMessageToolCall.builder()
+                    .id("id")
+                    .function(
+                        ChatCompletionMessageToolCall.Function.builder()
+                            .arguments(functionArguments)
+                            .name("User")
+                            .build()
+                    )
+                    .type(ChatCompletionMessageToolCall.Type.FUNCTION)
+                    .build()
+            )
+        ).build();
 
-        ChatCompletionChoice choice = new ChatCompletionChoice();
-        choice.setMessage(functionCallMessage);
+        com.openai.models.ChatCompletion.Choice choice =
+            com.openai.models.ChatCompletion.Choice.builder().message(chatCompletionMessage).build();
 
-        ChatCompletionResult mockResult = new ChatCompletionResult();
-        mockResult.setChoices(List.of(choice));
+        ChatCompletion mockResult = ChatCompletion.builder().choices(Collections.unmodifiableList(
+            Arrays.asList(choice))).build();
 
         when(mockService.createChatCompletion(any())).thenReturn(mockResult);
 
         Instructor instructor = new Instructor(mockService, 3);
 
-        List<ChatMessage> messages = List.of(
-                new ChatMessage("user", "Nenad Alajbegovic is 30 years old")
-        );
+        List<BaseMessage> messages = Collections.unmodifiableList(Arrays.asList(
+            new BaseMessage(BaseMessage.Role.USER.getValue(), "Nenad Alajbegovic is 30 years old")
+        ));
 
         assertThrows(InstructorException.class, () -> {
             instructor.createChatCompletion(messages, "gpt-4o-mini", User.class);
