@@ -1,22 +1,35 @@
 package solutions.own.instructor4j;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import java.util.Arrays;
+import java.util.Collections;
+import org.junit.jupiter.api.Assertions;
+import reactor.core.publisher.Flux;
+import reactor.core.scheduler.Schedulers;
 import solutions.own.instructor4j.exception.InstructorException;
-import solutions.own.instructor4j.model.ConferenceData;
+import solutions.own.instructor4j.fixtures.ExpectedParticipantList;
+import solutions.own.instructor4j.model.BaseMessage;
+import solutions.own.instructor4j.model.Participant;
 import solutions.own.instructor4j.service.AiChatService;
 import solutions.own.instructor4j.service.impl.OpenAiChatService;
 import solutions.own.instructor4j.model.User;
-import solutions.own.instructor4j.config.ApiKeys;
-
-import com.theokanning.openai.completion.chat.ChatMessage;
 
 import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.List;
+import solutions.own.instructor4j.config.ApiKeys;
+import solutions.own.instructor4j.util.Utils;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 public class IntegrationTest {
 
     String apiKey = ApiKeys.OPENAI_API_KEY;
+
+    private static final ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
     public void testRealAPIResponse() {
@@ -27,9 +40,9 @@ public class IntegrationTest {
         AiChatService openAiService = new OpenAiChatService(apiKey);
         Instructor instructor = new Instructor(openAiService, 3);
 
-        List<ChatMessage> messages = List.of(
-                new ChatMessage("user", "Nenad Alajbegovic is 25 years old")
-        );
+        List<BaseMessage> messages = Collections.unmodifiableList(Arrays.asList(
+            new BaseMessage(BaseMessage.Role.USER.getValue(), "Nenad Alajbegovic is 25 years old")
+        ));
 
         try {
             User user = instructor.createChatCompletion(messages, "gpt-4o-mini", User.class);
@@ -45,55 +58,118 @@ public class IntegrationTest {
     }
 
     @Test
-    public void testRealAPIResponseWithComplexDataModel() {
+    public void testRealAPIResponseAdvanced() {
         assertNotNull(apiKey, "OPENAI API key must be provided for integration tests.");
         assertNotEquals(ApiKeys.OPENAI_API_KEY_NOT_PROVIDED, apiKey,
             "OPENAI API key must be provided for integration tests.");
 
-            String meetingRecord =
-            "In our recent online meeting, participants from various backgrounds joined to discuss the upcoming tech conference. " +
-                "The names and contact details of the participants were as follows:\n\n" +
-
-                "- Name: John Doe, Email: johndoe@email.com, Twitter: @TechGuru44\n" +
-                "- Name: Jane Smith, Email: janesmith@email.com, Twitter: @DigitalDiva88\n" +
-                "- Name: Alex Johnson, Email: alexj@email.com, Twitter: @CodeMaster2023\n" +
-                "- Name: Emily Clark, Email: emilyc@email.com, Twitter: @InnovateQueen\n" +
-                "- Name: Ron Stewart, Email: ronstewart@email.com, Twitter: @RoboticsRon5\n" +
-                "- Name: Sarah Lee, Email: sarahlee@email.com, Twitter: @AI_Aficionado\n" +
-                "- Name: Mike Brown, Email: mikeb@email.com, Twitter: @FutureTechLeader\n" +
-                "- Name: Lisa Green, Email: lisag@email.com, Twitter: @CyberSavvy101\n" +
-                "- Name: David Wilson, Email: davidw@email.com, Twitter: @GadgetGeek77\n" +
-                "- Name: Daniel Kim, Email: danielk@email.com, Twitter: @DataDrivenDude\n\n" +
-
-                "During the meeting, we agreed on several key points. The conference will be held on March 15th, 2024, at the Grand Tech Arena " +
-                "located at 4521 Innovation Drive. Dr. Emily Johnson, a renowned AI researcher, will be our keynote speaker.\n\n" +
-
-                "The budget for the event is set at $50,000, covering venue costs, speaker fees, and promotional activities. Each participant " +
-                "is expected to contribute an article to the conference blog by February 20th.\n\n" +
-
-                "A follow-up meeting is scheduled for January 25th at 3 PM GMT to finalize the agenda and confirm the list of speakers.";
-
         AiChatService openAiService = new OpenAiChatService(apiKey);
         Instructor instructor = new Instructor(openAiService, 3);
 
-        List<ChatMessage> messages = List.of(
-            new ChatMessage("user", meetingRecord)
-        );
+        List<BaseMessage> messages = Collections.unmodifiableList(Arrays.asList(
+            new BaseMessage(BaseMessage.Role.USER.getValue(), "Nenad Alajbegovic will be 27 years old next year on this same date.")
+        ));
 
         try {
-            ConferenceData conferenceData = instructor.createChatCompletion(messages, "gpt-4o-mini", ConferenceData.class);
+            User user = instructor.createChatCompletion(messages, "gpt-4o-mini", User.class);
 
-            assertNotNull(conferenceData);
-            assertEquals(10, conferenceData.getConferenceParticipants().size());
-            assertEquals("John Doe", conferenceData.getConferenceParticipants().get(0).getName());
-            assertEquals("johndoe@email.com", conferenceData.getConferenceParticipants().get(0).getEmail());
-            assertEquals("@TechGuru44", conferenceData.getConferenceParticipants().get(0).getTwitter());
-            assertEquals(50000.0, conferenceData.getBudget());
-            System.out.println(conferenceData);
+            assertNotNull(user);
+            assertEquals(26, user.getAge());
+            assertEquals("Nenad Alajbegovic", user.getName());
+            System.out.println(user);
 
         } catch (InstructorException e) {
             fail("InstructorException occurred: " + e.getMessage());
         }
+    }
+
+    @Test
+    public void testRealAPIResponseStreamed() throws JsonProcessingException {
+        assertNotNull(apiKey, "OPENAI API key must be provided for integration tests.");
+        assertNotEquals(ApiKeys.OPENAI_API_KEY_NOT_PROVIDED, apiKey,
+            "OPENAI API key must be provided for integration tests.");
+
+        String meetingRecord = "In our recent online meeting, participants from various backgrounds joined to discuss the upcoming tech conference. " +
+            "The names and contact details of the participants were as follows:\n" +
+            "\n" +
+            "- Name: John Doe, Email: johndoe@email.com, Twitter: @TechGuru44\n" +
+            "- Name: Jane Smith, Email: janesmith@email.com, Twitter: @DigitalDiva88\n" +
+            "- Name: Alex Johnson, Email: alexj@email.com, Twitter: @CodeMaster2023\n" +
+            "- Name: Emily Clark, Email: emilyc@email.com, Twitter: @InnovateQueen\n" +
+            "- Name: Ron Stewart, Email: ronstewart@email.com, Twitter: @RoboticsRon5\n" +
+            "- Name: Sarah Lee, Email: sarahlee@email.com, Twitter: @AI_Aficionado\n" +
+            "- Name: Mike Brown, Email: mikeb@email.com, Twitter: @FutureTechLeader\n" +
+            "- Name: Lisa Green, Email: lisag@email.com, Twitter: @CyberSavvy101\n" +
+            "- Name: David Wilson, Email: davidw@email.com, Twitter: @GadgetGeek77\n" +
+            "- Name: Daniel Kim, Email: danielk@email.com, Twitter: @DataDrivenDude";
+
+        AiChatService openAiService = new OpenAiChatService(apiKey);
+        Instructor instructor = new Instructor(openAiService, 3);
+
+        StringBuilder fullResponseReceived = new StringBuilder();
+
+        List<Participant> expectedParticipants = ExpectedParticipantList.getExpectedParticipants();
+
+        List<BaseMessage> messages = Collections.unmodifiableList(Arrays.asList(
+            new BaseMessage(BaseMessage.Role.USER.getValue(), meetingRecord)
+        ));
+
+        Flux<String> extractionStream;
+
+        extractionStream = instructor.createStreamChatCompletion(
+            messages,
+            "gpt-4o-mini",
+            Participant.class
+        );
+
+        extractionStream
+            .publishOn(Schedulers.boundedElastic())
+            .doOnNext(extraction -> {
+                if (extraction != null) {
+                    fullResponseReceived.append(extraction);
+
+                    // Let us assure that json received always have balanced quotes, curly braces, and square brackets
+                    String consistentJson = Utils.ensureJsonClosures(fullResponseReceived.toString());
+                    assertTrue(Utils.isJsonValidOnClosures(consistentJson), "The json should always have valid closures");
+
+                    // Let's print the received objects as they arrive during the streaming process.
+                    // This will give you a clear idea of the data volume being transmitted, and help you understand
+                    // how we might efficiently send and display it in the front end.
+                    JsonNode rootNode;
+                    try {
+                        rootNode = objectMapper.readTree(consistentJson);
+                        JsonNode dataNode = rootNode.get("data");
+                        List<Participant> participants = objectMapper.convertValue(dataNode, new TypeReference<List<Participant>>() {});
+                        if (participants != null) {
+                            for (Participant p : participants) {
+                                System.out.println(
+                                    "    PARTICIPANT DATA RECEIVED: " + p.getName() + ", " + p.getEmail() + ", "
+                                        + p.getHandle());
+                            }
+                            System.out.println("\n");
+                        }
+                    } catch (JsonProcessingException e) {
+                        ; // perfectly fine
+                    }
+                }
+            })
+            .doOnError(error -> {
+                Assertions.fail("Flux emitted an unexpected error: " + error.getMessage());
+            })
+            .doOnComplete(() -> {
+                try {
+                    List<Participant> completedParticipants = Utils.getEntities(
+                        fullResponseReceived.toString().replaceAll("\\n", ""),
+                        Participant.class,
+                        "data");
+
+                    assertEquals(completedParticipants, expectedParticipants, "Participant list not as expected");
+
+                } catch (JsonProcessingException e) {
+                    Assertions.fail("Not able to interpretate data: " + e.getMessage());
+                }
+            })
+            .blockLast();
     }
 }
 
